--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,10 +57,11 @@ jobs:
           go install github.com/ma91n/snssharecount/cmd/snssharecount@latest
           go install github.com/ma91n/snssharecount/cmd/ga@latest
 
-      - name: Read JSON from secrets test
+      - name: Read JSON from variables test
+        env:
+          SAMPLE_JSON: ${{ vars.SMAPLE_JSON }} 
         run: |
-          echo ${{ secrets.SMAPLE_JSON }} > sample.json
-          jq . sample.json
+          jq . sns_count_cache.json
       
       # - name: Update SNS counts
       #   run: |
