--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,32 +61,45 @@ jobs:
         run: |
           echo '${{ vars.SAMPLE_JSON }}' > vars_sample.json
 
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: JSON
-          path: "vars_sample.json" 
 
       # - name: Update SNS counts
       #   run: |
       #     snssharecount > sns_count_cache.json
       #     ga > ga_cache.json
 
+      - name: Build with hexo
+        run: ${{ steps.detect-package-manager.outputs.runner }} hexo generate
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: public
+          path: public 
+          retention-days: 1
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download Artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: public
+          path: public
+
       - name: Checkout deploy target repository
         uses: actions/checkout@v4
         with:
           repository: yknz/yknz.github.io
           token: ${{ secrets.GH_PAT }}
-          path: public
-
-      - name: Build with hexo
-        run: ${{ steps.detect-package-manager.outputs.runner }} hexo generate
+          path: target
 
       - name: Deploy to target repository
         run: |
-          cd public
-          git config --local user.name "GitHub Actions"
-          git config --local user.email "github-actions@example.com"
+          cp -rT public target
+          cd target
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "deploy from GitHub Actions"
           git push origin HEAD
