--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Get last commit message
+        id: get-commit-message
+        shell: bash
+        run: |
+          {
+            message=`git log -n 1 --pretty=format:"%s"`
+            echo 'value<<EOF'
+            echo $message
+            echo EOF
+          } >> "$GITHUB_OUTPUT"
+
       - name: Detect package manager
         id: detect-package-manager
         run: |
@@ -101,5 +112,5 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "deploy from GitHub Actions"
+          git commit -m "${{ steps.get-commit-message.outputs.value }}"
           git push origin HEAD
