--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,10 @@ jobs:
 
       - name: Get last commit message
         id: get-commit-message
-        shell: bash
         run: |
           {
-            message=`git log -n 1 --pretty=format:"%s"`
             echo 'value<<EOF'
-            echo $message
+            echo "commit message"
             echo EOF
           } >> "$GITHUB_OUTPUT"
 
